tests/testcases/errors/BCE0096-1.boo
"""
BCE0096-1.boo(7,9): BCE0096: Method 'Foo.Bar' already has a label 'label'.
"""
class Foo:
	def Bar():
		:label
		:label

:label
